[project]
name = "aa"
version = "0.1.0"
description = ""
authors = [
    {name = "swenbao",email = "essence.lost.0b@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytube @ git+https://github.com/pytube/pytube",
    "yt-dlp (>=2025.4.30,<2026.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
